Project cleanup: removed old files, optimized structure

--- a/config.json
+++ b/config.json
@@ -1,8 +1,19 @@
 {
   "rostender_filter_url": "",
-  "gpt_filter_text": "",
-  "keywords": [],
-  "exclude_keywords": [],
-  "city": ""
+  "gpt_filter_text": "Компания МЦЭ Инжиниринг занимается КИПиА, газоанализом, узлами учета, системами контроля утечек газа, СИКГ, дозированием реагентов и шкафами автоматики. Считаем подходящими тендеры, связанные с этими направлениями. Отвечай строго JSON: {\"is_match\": true/false, \"reason\": \"краткое объяснение\"}.",
+  "keywords": [
+    "сигнализация",
+    "газ",
+    "датчик",
+    "контроль",
+    "анализ",
+    "кипиа"
+  ],
+  "exclude_keywords": [
+    "ремонт",
+    "строительство",
+    "покраска",
+    "благоустройство"
+  ],
+  "city": "Москва"
 }
-
